syntax = "proto3";


option go_package = ".;proto";

service User {
    rpc GetUserList(PageInfoRequest) returns (UserListResponse); // 用户列表
    rpc GetUserByMobile(MobileRequest) returns (UserInfoResponse); // 通过mobile查询用户
    rpc GetUserByID(IDRequest) returns (UserInfoResponse);   // 通过id查询用户
    rpc CreateUser(CreateUserInfoRequest) returns (UserInfoResponse); // 添加用户
    rpc UpdateUser(UpdateUserInfoRequest) returns (Empty); // 更新用户
    rpc CheckPassword(CheckPasswordInfoRequest) returns (CheckPasswordResponse); // 校验密码
}

message PageInfoRequest {
    uint32 pageNumber = 1;
    uint32 pageSize = 2;
}

message MobileRequest {
    string mobile = 1;
}

message IDRequest {
    int32 id = 1;
}

message CreateUserInfoRequest {
    string nickName = 1;
    string password = 2;
    string mobile = 3;
}

message UpdateUserInfoRequest {
    int32 id = 1;
    string nickName = 2;
    string gender = 3;
    uint64 birthday = 4;
}

message CheckPasswordInfoRequest {
    string password = 1;
    string encryptedPassword = 2;
}

message UserInfoResponse {
    int32  id = 1;
    string mobile = 2;
    string password = 3;
    string nickName = 4;
    uint64 birthday = 5;
    string gender = 6;
    int32  role = 7;
}

message UserListResponse {
    int64    total = 1;
    repeated UserInfoResponse data = 2;
}

message CheckPasswordResponse {
    bool success = 1;
}

message Empty {}